Fix to the bug "Can't open with VDMTools if spaces in project name - ID: 3415897" - This fix is NOT YET TESTED since VDMTools crashes when loading a file on Lion and I cannot try it in a Linux machine until a version has been build.
git-svn-id: https://overture.svn.sourceforge.net/svnroot/overture/trunk@3391 2b2d4d09-c93c-414a-ad04-6e973f5c1cff